--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="col-1"></div>
           </div>
         </div>
-        <p id="footer">Designed and Coded by On Tai To and is <a href="https://github.com/EvaSuper0115/SheCodes-Plus-Weather-App" target="_blank">open-sourced on GitHub</a>and <a href="https://app.netlify.com/sites/loquacious-pastelito-af78cc/overview" target="_blank">hosted on Netlify</a></p>
+        <p id="footer">Designed and Coded by <a href="mailto:2021toontaieva@gmail.com" target="_blank">On Tai To <i class="fa-solid fa-envelope"></i></a> and is <a href="https://github.com/EvaSuper0115/SheCodes-Plus-Weather-App" target="_blank">open-sourced on GitHub </a>and <a href="https://app.netlify.com/sites/loquacious-pastelito-af78cc/overview" target="_blank">hosted on Netlify</a></p>
       </div>
     </div>
     <script
