--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
           </div>
         </div>
 
+        <div id="last-updated-title">last updated</div>
       <div id="date"></div>
-      <div id="time-now"></div>
+      <div id="last-updated-time"></div>
       </div>
         
     
