fixed a bug by changing the type "submit" to "button"
there was a bug: search current location button only worked when website is opened on computer, not on a mobile device.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
        </div>
         
           <form id="current-location-search">
-            <button class="currentLocationButton btn" type="submit">
+            <button class="currentLocationButton btn" type="button">
               <i class="fa-solid fa-map-location-dot"></i> <small class="currentLocation">current location</small>
             </button>
           </form>
